<resources>
    <string name="app_name">MyApp</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age:</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="contact_person">Contact Person</string>
    <string name="contact_person_s_phone">Contact Person\'s Phone</string>
</resources>