<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/full_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/age_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/email_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/phone_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_number"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/birthday_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/address_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/contact_person_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_person"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/contact_person_phone_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_person_s_phone"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
